--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
 title: Archive
 layout: default
-description: "「我干了什么 究竟拿了时间换了什么」"
+description: "「轻飘飘的旧时光，就这么溜走；转头回去看看时，已匆匆数年。」"
 header-img: "img/tag-bg.jpg"
 ---
 
