--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
 title: Archive
 layout: default
-description: "「我干了什么 究竟拿了时间换了什么」"
+description: "「让青春吹动了你的长发 让它牵引你的梦」"
 header-img: "img/tag-bg.jpg"
 ---
 
